--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -36,11 +36,11 @@
     <div class="reporting">
         <h1>Javier Borreguero</h1>
         <p>Desarrollador de software y amante de las nuevas tecnologías</p>
-        <a th:href="@{#about-me-image-description}" class="learn-more">Saber más</a>
+        <a th:href="@{#section-about-me}" class="learn-more">Saber más</a>
     </div>
 </section>
 <!--Sección sobre mí-->
-<section class="about-me">
+<section class="about-me" id="section-about-me">
     <h1>Sobre mí</h1>
     <div class="about-me-row">
         <div class="about-me-col" id="about-me-image">
