--- a/src/main/resources/templates/My_Projects.html
+++ b/src/main/resources/templates/My_Projects.html
@@ -35,10 +35,10 @@
     <div class="reporting">
         <h1>Proyectos</h1>
         <p>Conoce mis mejores proyectos</p>
-        <a th:href="@{#chat-description}" class="learn-more">Ver proyectos</a>
+        <a th:href="@{#battleShipProjectSection}" class="learn-more">Ver proyectos</a>
     </div>
 </section>
-<section class="battleShipProject">
+<section class="battleShipProject" id="battleShipProjectSection">
     <h1>Mis proyectos</h1>
     <div class="battleShip">
         <div class="battleShip-col" id="battleShip-image">
