--- a/src/main/resources/static/style/contact_me/ContactMeStyle.css
+++ b/src/main/resources/static/style/contact_me/ContactMeStyle.css
@@ -8,7 +8,7 @@
 /* ----------------------------------- */
 /* ---Configuración de la imagen--- */
 .header {
-    min-height: 115vh;
+    height: 1000px;
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../images/portada.jpg");
     background-position: initial;
@@ -167,10 +167,11 @@ nav .fa {
 
 /* --- Footer ---*/
 .footer {
-    padding-top: 100px;
-    padding-bottom: 20px;
-    width: 100%;
+    width: 80%;
+    margin: auto;
     text-align: center;
+    padding-top: 10%;
+    padding-bottom: 10px;
 }
 
 .footer h4 {
